tests/neg-custom-args/captures/nicolas1.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/nicolas1.scala:10:2 --------------------------------------
10 |  val all: Seq[Rand ?->{head, tail*} A] = head +: tail // error
   |  ^
   |  Found:    (contextual$1: Rand^'s1) ?->{head, tail*} A^'s2
   |  Required: (Rand^) ?->{head} A
   |
   |  Note that capability tail* is not included in capture set {head}.
   |
   |  where:    ^ refers to the universal root capability
   |
11 |  all(nextInt(all.length))
   |
   | longer explanation available when compiling with `-explain`
